# techpark_cpp_2023

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml
project/: CMakeLists.txt
project/include/: CatOperation.h  EchoOperation.h  Exceptions.h  Film.h  IOperation.h  Parser.h  Pipeline.h  Top.h  WcOperation.h
project/src/: CatOperation.cpp  EchoOperation.cpp  Exceptions.cpp  Film.cpp  Parser.cpp  Pipeline.cpp  Top.cpp  WcOperation.cpp
tests/: CMakeLists.txt  tests.cpp
